# internal/cheptel/api/api.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gaetanDubuc/beeckend/internal/cheptel/path"
+	"github.com/gaetanDubuc/beeckend/internal/cheptel/schema"
 	"github.com/gaetanDubuc/beeckend/internal/entity"
 	"github.com/gaetanDubuc/beeckend/internal/log"
 	"github.com/gaetanDubuc/beeckend/pkg/json"
@@ -14,6 +15,7 @@ import (
 
 type Service interface {
 	Subscribe(ctx context.Context, user *entity.User, cheptels chan<- *[]entity.Cheptel) error
+	Create(ctx context.Context, req schema.CreateRequest) (entity.Cheptel, error)
 }
 
 type Upgrader[T Conn] interface {
@@ -25,18 +27,30 @@ type Conn interface {
 	Close() error
 }
 
-func RegisterHandlers[T Conn](router *gin.RouterGroup, service Service, upgrader Upgrader[T], logger log.Logger) {
-	resource := &Resource[T]{upgrader, service, logger}
-	router.GET(path.Query, resource.query)
-	// router.POST(path.CheptelsGroup, create)
+type Middleware interface {
+	AuthHandler(c *gin.Context)
+	CurrentAuthenticatedUser(ctx context.Context) entity.User
+}
+
+func RegisterHandlers[T Conn](
+	router *gin.RouterGroup,
+	service Service,
+	authMiddleware Middleware,
+	upgrader Upgrader[T],
+	logger log.Logger,
+) {
+	resource := &Resource[T]{upgrader, service, authMiddleware, logger}
+	router.GET(path.Query, authMiddleware.AuthHandler, resource.query)
+	router.POST(path.CheptelsGroup, authMiddleware.AuthHandler, resource.create)
 	// router.PUT(path.CheptelsGroup, update)
 	// router.DELETE(path.MakeDeletePath(path.CheptelParam), delete)
 }
 
 type Resource[T Conn] struct {
-	upgrader Upgrader[T]
-	service  Service
-	logger   log.Logger
+	upgrader       Upgrader[T]
+	service        Service
+	authMiddleware Middleware
+	logger         log.Logger
 }
 
 // @Summary	Query the user's cheptels
@@ -75,4 +89,39 @@ func (r *Resource[T]) query(c *gin.Context) {
 			panic(err)
 		}
 	}
+}
+
+// @Summary	Create a cheptel
+// @Schemes
+// @Tags		Cheptel
+// @Accept		json
+// @Produce	json
+// @Success	200	{string}	create
+// @Param		cheptel	body	schema.CreateRequest	true	"Cheptel to create"
+// @Router		/cheptels [post]
+// @Security	JWT Token
+func (r *Resource[T]) create(c *gin.Context) {
+	logger := r.logger.With(c.Request.Context(), "method", "create")
+
+	ctx := c.Request.Context()
+	user := r.authMiddleware.CurrentAuthenticatedUser(ctx)
+
+	var req schema.CreateRequest
+	err := c.ShouldBind(&req)
+	if err != nil {
+		logger.Error(err)
+		c.AbortWithStatus(http.StatusBadRequest)
+		return
+	}
+
+	req.UserID = user.ID
+
+	cheptel, err := r.service.Create(ctx, req)
+	if err != nil {
+		logger.Error(err)
+		c.AbortWithStatus(http.StatusInternalServerError)
+		return
+	}
+
+	c.SecureJSON(http.StatusOK, cheptel)
 }
